# monkey_rust

./: .gitignore  Cargo.toml  Note.md  README.md
src/: main.rs
src/eval/: builtins.rs  environment.rs  evaluator.rs  mod.rs  test.rs
src/lexer/: lexer.rs  mod.rs  test.rs  token.rs
src/parser/: mod.rs  program.rs  test.rs
