[package]
name = "monkey_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ctrlc = "^1.2.0"
async-std = { version = "^1.9.0", features = ["attributes", "unstable"] }
log = "^0.4.14"
env_logger = "^0.9.0"